--- a/laplace3d/Makefile
+++ b/laplace3d/Makefile
@@ -3,17 +3,13 @@ LIB	:= -L$(CUDA_HOME)/lib64 -lcudart
 
 NVCCFLAGS	:= -lineinfo -arch=sm_75 --ptxas-options=-v --use_fast_math
 
-all: 		laplace3d laplace3d_new
+all: 		laplace3d 
 
 laplace3d:	laplace3d.cu laplace3d_gold.cpp laplace3d_kernel.h Makefile
 		nvcc laplace3d.cu laplace3d_gold.cpp -o laplace3d \
 				       $(INC) $(NVCCFLAGS) $(LIB) \
 					    -D BLOCK_X=$(BLOCK_X) \
-					    -D BLOCK_Y=$(BLOCK_Y)
-
-laplace3d_new:	laplace3d_new.cu laplace3d_gold.cpp laplace3d_kernel_new.h Makefile
-		nvcc laplace3d_new.cu laplace3d_gold.cpp -o laplace3d_new \
-		$(INC) $(NVCCFLAGS) $(LIB)
-
+					    -D BLOCK_Y=$(BLOCK_Y) \
+					    -D BLOCK_Z=$(BLOCK_Z)
 clean:
-		rm -f laplace3d laplace3d_new
+		rm -f laplace3d
