--- a/yme.conf
+++ b/yme.conf
@@ -50,7 +50,7 @@ BLOCK_Z = 1, 2, 4, 8, 16, 32, 64, 128
 # compile (optional, default: none)
 # Shell command to compile a test, typically a call to 'make' or similar.
 
-compile = make -B ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
+compile = make -B ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
 
 
 # test
