fix: Fix autotune conf

--- a/yme.conf
+++ b/yme.conf
@@ -29,8 +29,11 @@ variables = {BLOCK_X, BLOCK_Y, BLOCK_Z}
 # BAR = Hello, Welcome, Hi
 #
 BLOCK_X = 16, 32, 48, 64, 128, 256
-BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128
-BLOCK_Z = 1, 2, 4, 8, 16, 32, 64, 128
+BLOCK_Y = 1, 2, 4
+BLOCK_Z = 1, 2, 4
+
+#, 8 , 16, 32, 64, 128
+#, 8 , 16, 32, 64, 128
 
 #BLOCK_X = 16, 32, 48, 64, 128
 #BLOCK_Y = 2, 4, 6, 8
