--- a/yme.conf
+++ b/yme.conf
@@ -28,7 +28,7 @@ variables = {BLOCK_X, BLOCK_Y, BLOCK_Z}
 # FOO = 1, 2, 3
 # BAR = Hello, Welcome, Hi
 #
-BLOCK_X = 16, 32, 48, 64, 128, 256
+BLOCK_X = 16, 32, 48, 64, 128
 BLOCK_Y = 1, 2, 4
 BLOCK_Z = 1, 2, 4
 
