fix: Remove debug mode

--- a/hpclab13.conf
+++ b/hpclab13.conf
@@ -28,9 +28,9 @@ variables = {BLOCK_X, BLOCK_Y, BLOCK_Z}
 # FOO = 1, 2, 3
 # BAR = Hello, Welcome, Hi
 #
-BLOCK_X = 16
-BLOCK_Y = 1
-BLOCK_Z = 1
+BLOCK_X = 16, 32, 64, 128, 256
+BLOCK_Y = 1, 2, 4 
+BLOCK_Z = 1, 2, 4 
 
 #BLOCK_X = 16, 32, 48, 64, 128
 #BLOCK_Y = 2, 4, 6, 8
