feat: Move to 2D and save output to file

--- a/hpclab13.conf
+++ b/hpclab13.conf
@@ -19,7 +19,7 @@
 # or a nested list, showing independence: {FOO, {BAR1, BAR2}, {BAZ1, BAZ2}}
 # This syntax is explained fully in the User's Guide.
 
-variables = {BLOCK_X, BLOCK_Y, BLOCK_Z}
+variables = {BLOCK_X, BLOCK_Y}
 
 
 
@@ -30,7 +30,6 @@ variables = {BLOCK_X, BLOCK_Y, BLOCK_Z}
 #
 BLOCK_X = 16, 32, 64, 128, 256
 BLOCK_Y = 1, 2, 4 
-BLOCK_Z = 1, 2, 4 
 
 #BLOCK_X = 16, 32, 48, 64, 128
 #BLOCK_Y = 2, 4, 6, 8
