feat: Handle autotuning properly
Fix Makefile etc to handle proper autotuning. Remember to comment out
cpu code if you want to tune the kernel.

--- a/yme.conf
+++ b/yme.conf
@@ -1,10 +1,10 @@
 # Autotuning System
 #
-# laplace3d.conf
+# laplace2d.conf
 #
-# This configuration file is for testing the laplace3d CUDA example.
+# This configuration file is for testing the laplace2d CUDA example.
 # 
-# laplace3d and laplace3d_naive are compiled with different possible values of 
+# laplace2d and laplace2d_naive are compiled with different possible values of 
 # BLOCK_X and BLOCK_Y, then timed by the system.
 
 
@@ -29,7 +29,7 @@ variables = {BLOCK_X, BLOCK_Y}
 # BAR = Hello, Welcome, Hi
 #
 BLOCK_X = 16, 32, 48, 64, 128
-BLOCK_Y = 1, 2, 4
+BLOCK_Y = 4, 8, 16, 32
 
 #, 8 , 16, 32, 64, 128
 #, 8 , 16, 32, 64, 128
@@ -52,19 +52,19 @@ BLOCK_Y = 1, 2, 4
 # compile (optional, default: none)
 # Shell command to compile a test, typically a call to 'make' or similar.
 
-compile = make -B ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
+compile = make -B ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% HOST=yme
 
 
 # test
 # Shell command to run a test.
 
-test = ./bin/laplace3d_%%ID%%
+test = ./bin/laplace2d_%%ID%%
 
 
 # clean (optional, default: none)
 # Shell command to clean up (e.g. delete) any unwanted test files.
 
-clean = rm bin/laplace3d_%%ID%%
+clean = rm bin/laplace2d_%%ID%%
 
 
 
@@ -81,7 +81,7 @@ clean = rm bin/laplace3d_%%ID%%
 # e.g: "repeat = 3, avg" or "repeat = 4" ('min' implied)
 
 #repeat = 3, min
-repeat = 3, med 
+repeat = 10, med 
 
 
 # optimal (optional, default: min_time)
@@ -102,7 +102,7 @@ optimal = min_time
 # If not defined, no log will be saved.
 # This file will be overwritten!
 
-log = results/laplace3d.csv
+log = results/laplace2d.csv
 
 
 
