--- a/hpclab13.conf
+++ b/hpclab13.conf
@@ -29,7 +29,7 @@ variables = {BLOCK_X, BLOCK_Y}
 # BAR = Hello, Welcome, Hi
 #
 
-BLOCK_X = 16, 32, 48, 64, 128
+BLOCK_X = 16, 32, 64, 128
 BLOCK_Y = 4, 8, 16, 32
 
 #BLOCK_X = 16, 32, 48, 64, 128
