--- a/yme.conf
+++ b/yme.conf
@@ -28,8 +28,12 @@ variables = {BLOCK_X, BLOCK_Y}
 # FOO = 1, 2, 3
 # BAR = Hello, Welcome, Hi
 #
-BLOCK_X = 16, 32, 48, 64, 128
-BLOCK_Y = 4, 8, 16, 32
+#
+BLOCK_X = 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Y = 1, 2, 4, 8, 16, 32
+
+#BLOCK_X = 16, 32, 64, 128
+#BLOCK_Y = 4, 8, 16, 32
 
 #, 8 , 16, 32, 64, 128
 #, 8 , 16, 32, 64, 128
