--- a/yme.conf
+++ b/yme.conf
@@ -27,24 +27,9 @@ variables = {BLOCK_X, BLOCK_Y}
 # Lists the possible values each variable can take, e.g:
 # FOO = 1, 2, 3
 # BAR = Hello, Welcome, Hi
-#
-#
-BLOCK_X = 16, 32, 64, 128, 256, 512, 1024
-BLOCK_Y = 1, 2, 4, 8, 16, 32
 
-#BLOCK_X = 16, 32, 64, 128
-#BLOCK_Y = 4, 8, 16, 32
-
-#, 8 , 16, 32, 64, 128
-#, 8 , 16, 32, 64, 128
-
-#BLOCK_X = 16, 32, 48, 64, 128
-#BLOCK_Y = 2, 4, 6, 8
-
-#BLOCK_X = 32, 64, 128
-#BLOCK_Y = 2, 4, 6
-
-
+BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 
 [testing]
 # Shows how to compile and run the tests.
