--- a/yme.conf
+++ b/yme.conf
@@ -27,22 +27,9 @@ variables = {BLOCK_X, BLOCK_Y}
 # Lists the possible values each variable can take, e.g:
 # FOO = 1, 2, 3
 # BAR = Hello, Welcome, Hi
-#
-#
-BLOCK_X = 16, 32, 64, 128, 256, 512, 1024
-BLOCK_Y = 1, 2, 4, 8, 16, 32
 
-#BLOCK_X = 16, 32, 64, 128
-#BLOCK_Y = 4, 8, 16, 32
-
-#, 8 , 16, 32, 64, 128
-#, 8 , 16, 32, 64, 128
-
-#BLOCK_X = 16, 32, 48, 64, 128
-#BLOCK_Y = 2, 4, 6, 8
-
-#BLOCK_X = 32, 64, 128
-#BLOCK_Y = 2, 4, 6
+BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 
 
 
@@ -85,7 +72,7 @@ clean = rm bin/laplace2d_%%ID%%
 # e.g: "repeat = 3, avg" or "repeat = 4" ('min' implied)
 
 #repeat = 3, min
-repeat = 10, med 
+repeat = 3, med 
 
 
 # optimal (optional, default: min_time)
