feat: Cluster config files for autotuning
This commit also refactors the autotuning scripts to properly handle the
clustered config files. It also fixes a bug with the coop_base kernel.

--- a/configs/hpclab13/base.conf
+++ b/configs/hpclab13/base.conf
@@ -27,10 +27,10 @@ variables = {BLOCK_X, BLOCK_Y}
 # Lists the possible values each variable can take, e.g:
 # FOO = 1, 2, 3
 # BAR = Hello, Welcome, Hi
+#
 
 BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
-
 
 
 [testing]
@@ -43,19 +43,19 @@ BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 # compile (optional, default: none)
 # Shell command to compile a test, typically a call to 'make' or similar.
 
-compile = make -B ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% HOST=yme
+compile = cd ../../ && make -B ARCH=sm_75 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
 
 
 # test
 # Shell command to run a test.
 
-test = ./bin/laplace2d_%%ID%%
+test = ../../bin/laplace2d_%%ID%%
 
 
 # clean (optional, default: none)
 # Shell command to clean up (e.g. delete) any unwanted test files.
 
-clean = rm bin/laplace2d_%%ID%%
+clean = rm ../../bin/laplace2d_%%ID%%
 
 
 
