feat: Add block size optimizing script for different domain dimensions WIP

--- a/configs/hpclab13/base.conf
+++ b/configs/hpclab13/base.conf
@@ -29,8 +29,11 @@ variables = {BLOCK_X, BLOCK_Y}
 # BAR = Hello, Welcome, Hi
 #
 
-BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
-BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+#BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+#BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+
+BLOCK_X = 1, 2
+BLOCK_Y = 1, 2
 
 
 [testing]
@@ -43,8 +46,7 @@ BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 # compile (optional, default: none)
 # Shell command to compile a test, typically a call to 'make' or similar.
 
-compile = cd ../../ && make -B ARCH=sm_75 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
-
+compile = cd ../../ && make -B ARCH=sm_75 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% DIM=512
 
 # test
 # Shell command to run a test.
@@ -72,7 +74,7 @@ clean = rm ../../bin/laplace2d_%%ID%%
 # e.g: "repeat = 3, avg" or "repeat = 4" ('min' implied)
 
 #repeat = 3, min
-repeat = 3, med 
+repeat = 1, med 
 
 
 # optimal (optional, default: min_time)
@@ -82,7 +84,8 @@ repeat = 3, med
 # 'test' command above and uses that as the score. Otherwise, the score is 
 # taken from the last line of output from the 'test' command.
 
-optimal = min_time
+#optimal = min_time
+optimal = min
 
 
 
