feat: Add blockdim-optimizing script
This commit also fixes a weird bug where the autotuning script crashes
if all output values are 0.7. Therefore, we include more decimals in
each output to side-step the error.

--- a/configs/hpclab13/smem.conf
+++ b/configs/hpclab13/smem.conf
@@ -29,12 +29,8 @@ variables = {BLOCK_X, BLOCK_Y}
 # BAR = Hello, Welcome, Hi
 #
 
-#BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
-#BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
-
-BLOCK_X = 1, 2
-BLOCK_Y = 1, 2
-
+BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 
 [testing]
 # Shows how to compile and run the tests.
@@ -46,8 +42,7 @@ BLOCK_Y = 1, 2
 # compile (optional, default: none)
 # Shell command to compile a test, typically a call to 'make' or similar.
 
-compile = cd ../../ && make -B SMEM=true ARCH=sm_75 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z% DIM=512
-
+compile = cd ../../ && make -B SMEM=true ARCH=sm_75 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z% DIM=64
 
 # test
 # Shell command to run a test.
@@ -75,7 +70,7 @@ clean = rm ../../bin/laplace2d_%%ID%%
 # e.g: "repeat = 3, avg" or "repeat = 4" ('min' implied)
 
 #repeat = 3, min
-repeat = 1, med 
+repeat = 10, med 
 
 
 # optimal (optional, default: min_time)
