--- a/configs/yme/coop_smem.conf
+++ b/configs/yme/coop_smem.conf
@@ -43,7 +43,7 @@ BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 # compile (optional, default: none)
 # Shell command to compile a test, typically a call to 'make' or similar.
 
-compile = cd ../../ && make -B COOP=true SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
+compile = cd ../../ && make -B COOP=true SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z% DIM=256
 
 
 # test
@@ -72,7 +72,7 @@ clean = rm ../../bin/laplace2d_%%ID%%
 # e.g: "repeat = 3, avg" or "repeat = 4" ('min' implied)
 
 #repeat = 3, min
-repeat = 3, med 
+repeat = 10, med 
 
 
 # optimal (optional, default: min_time)
@@ -82,7 +82,8 @@ repeat = 3, med
 # 'test' command above and uses that as the score. Otherwise, the score is 
 # taken from the last line of output from the 'test' command.
 
-optimal = min_time
+#optimal = min_time
+optimal = min
 
 
 
