feat: Prevent autotuning from running CPU version too often
This will significantly reduce the time required to perform the
autotuning.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 snapshots
 coop_snapshots
+dimensions/
 results/
-result
 bin/
 *.ncu-rep
 *.txt
 *.png
 *.pyc
+result
+result_*
 solution
+solution_*
