--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 snapshots
 coop_snapshots
 dimensions/
-results/
 bin/
 *.ncu-rep
 *.txt
@@ -11,3 +10,6 @@ result
 result_*
 solution
 solution_*
+results/*
+!results/quad_gpu
+!results/quad_gpu/*.txt
