--- a/smem.conf
+++ b/smem.conf
@@ -1,12 +1,13 @@
 [variables]
-variables = {DIM, BLOCK_X, BLOCK_Y}
+variables = {NGPUS, DIM, BLOCK_X, BLOCK_Y}
 [values]
 # Use sed to change these values (set BLOCK_X, BLOCK_Y to optimal values for a given DIM)
-DIM = 256
-BLOCK_X = 32
+NGPUS = 1
+DIM = 32
+BLOCK_X = 2
 BLOCK_Y = 32
 [testing]
-compile = make -C ~/Code/thesis -B SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% DIM=%DIM%
+compile = make -C ~/Code/thesis -B SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
 test = ~/Code/thesis/bin/laplace2d_%%ID%%
 clean = rm ~/Code/thesis/bin/laplace2d_%%ID%%
 [scoring]
