feat: Add configs for all versions

--- a/coop_smem.conf
+++ b/coop_smem.conf
@@ -7,7 +7,7 @@ DIM = 32
 BLOCK_X = 2
 BLOCK_Y = 32
 [testing]
-compile = make -C ~/thesis_autotune -B SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
+compile = make -C ~/thesis_autotune -B COOP=true SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
 test = ~/thesis_autotune/bin/laplace2d_%%ID%%
 clean = rm ~/thesis_autotune/bin/laplace2d_%%ID%%
 [scoring]
