--- a/base.conf
+++ b/base.conf
@@ -3,11 +3,11 @@ variables = {NGPUS, DIM, BLOCK_X, BLOCK_Y}
 [values]
 # Use sed to change these values (set BLOCK_X, BLOCK_Y to optimal values for a given DIM)
 NGPUS = 1
-DIM = 32
-BLOCK_X = 2
-BLOCK_Y = 32
+DIM = 64
+BLOCK_X = 1
+BLOCK_Y = 2
 [testing]
-compile = make -C ~/thesis_autotune -B SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
+compile = make -C ~/thesis_autotune -B HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
 test = ~/thesis_autotune/bin/laplace2d_%%ID%%
 clean = rm ~/thesis_autotune/bin/laplace2d_%%ID%%
 [scoring]
