--- a/base.conf
+++ b/base.conf
@@ -3,15 +3,15 @@ variables = {NGPUS, DIM, BLOCK_X, BLOCK_Y}
 [values]
 # Use sed to change these values (set BLOCK_X, BLOCK_Y to optimal values for a given DIM)
 NGPUS = 1
-DIM = 64
-BLOCK_X = 1
-BLOCK_Y = 2
+DIM = 256
+BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 [testing]
 compile = make -C ~/thesis_autotune -B HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
 test = ~/thesis_autotune/bin/laplace2d_%%ID%%
 clean = rm ~/thesis_autotune/bin/laplace2d_%%ID%%
 [scoring]
-repeat = 20, med 
+repeat = 1, med 
 optimal = min
 [output]
 # If defined, this is the name of a CSV file which a log of the tests 
