--- a/configs/yme/coop_smem.conf
+++ b/configs/yme/coop_smem.conf
@@ -7,9 +7,9 @@ DIM = 32768
 BLOCK_X = 32
 BLOCK_Y = 32
 [testing]
-compile = make -C ~/thesis_autotune -B COOP=true SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
-test = ~/thesis_autotune/bin/laplace2d_%%ID%%
-clean = rm ~/thesis_autotune/bin/laplace2d_%%ID%%
+compile = make -C ~/$YME_WORKING_FOLDER -B COOP=true SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
+test = ~/$YME_WORKING_FOLDER/bin/laplace2d_%%ID%%
+clean = rm ~/$YME_WORKING_FOLDER/bin/laplace2d_%%ID%%
 [scoring]
 repeat = 20, med 
 optimal = min
