--- a/configs/yme/deep_halo.conf
+++ b/configs/yme/deep_halo.conf
@@ -8,9 +8,9 @@ DIM = 256
 BLOCK_X = 32
 BLOCK_Y = 32
 [testing]
-compile = make -C ~/thesis_autotune -B HOST=yme ARCH=sm_70 ID=%%ID%% HALO_DEPTH=%HALO_DEPTH% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
-test = ~/thesis_autotune/bin/laplace2d_%%ID%%
-clean = rm ~/thesis_autotune/bin/laplace2d_%%ID%%
+compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% HALO_DEPTH=%HALO_DEPTH% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
+test = ~/$YME_WORKING_FOLDER/bin/laplace2d_%%ID%%
+clean = rm ~/$YME_WORKING_FOLDER/bin/laplace2d_%%ID%%
 [scoring]
 repeat = 20, med 
 optimal = min
