fix: Fix scripts for 3D
Migrating from 2D to 3D caused multiple of the scripts to break. This
commit fixes some related issues.

--- a/configs/yme/deep_halo.conf
+++ b/configs/yme/deep_halo.conf
@@ -1,16 +1,17 @@
 [variables]
-variables = {HALO_DEPTH, NGPUS, DIM, BLOCK_X, BLOCK_Y}
+variables = {HALO_DEPTH, NGPUS, DIM, BLOCK_X, BLOCK_Y, BLOCK_Z}
 [values]
 # Use sed to change these values
 HALO_DEPTH = 16
 NGPUS = 4
 DIM = 256
-BLOCK_X = 32
-BLOCK_Y = 32
+BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Z = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 [testing]
 compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% HALO_DEPTH=%HALO_DEPTH% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
-test = ~/$YME_WORKING_FOLDER/bin/laplace2d_%%ID%%
-clean = rm ~/$YME_WORKING_FOLDER/bin/laplace2d_%%ID%%
+test = ~/$YME_WORKING_FOLDER/bin/laplace3d_%%ID%%
+clean = rm ~/$YME_WORKING_FOLDER/bin/laplace3d_%%ID%%
 [scoring]
 repeat = 20, med 
 optimal = min
@@ -19,4 +20,4 @@ optimal = min
 # performed will be written to.
 # If not defined, no log will be saved.
 # This file will be overwritten!
-#log = results/laplace2d.csv
+#log = results/laplace3d.csv
