--- a/configs/yme/coop.conf
+++ b/configs/yme/coop.conf
@@ -1,15 +1,17 @@
 [variables]
-variables = {NGPUS, DIM, BLOCK_X, BLOCK_Y}
+variables = {NGPUS, DIM, BLOCK_X, BLOCK_Y, BLOCK_Z}
 [values]
 # Use sed to change these values (set BLOCK_X, BLOCK_Y to optimal values for a given DIM)
 NGPUS = 1
 DIM = 32768
-BLOCK_X = 32
-BLOCK_Y = 32
+BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_Z = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 [testing]
-compile = make -C ~/$YME_WORKING_FOLDER -B COOP=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
-test = ~/$YME_WORKING_FOLDER/bin/laplace2d_%%ID%%
-clean = rm ~/$YME_WORKING_FOLDER/bin/laplace2d_%%ID%%
+compile = make -C ~/$YME_WORKING_FOLDER -B COOP=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
+
+test = ~/$YME_WORKING_FOLDER/bin/laplace3d_%%ID%%
+clean = rm ~/$YME_WORKING_FOLDER/bin/laplace3d_%%ID%%
 [scoring]
 repeat = 20, med 
 optimal = min
@@ -18,4 +20,4 @@ optimal = min
 # performed will be written to.
 # If not defined, no log will be saved.
 # This file will be overwritten!
-#log = results/laplace2d.csv
+#log = results/laplace3d.csv
