chore: Rename laplace3d -> stencil
As the application will now focus on generalized stencils for arbitrary
problems, removing 'laplace3d' is necessary.

--- a/configs/hpclab13/base.conf
+++ b/configs/hpclab13/base.conf
@@ -1,10 +1,10 @@
 # Autotuning System
 #
-# laplace2d.conf
+# stencil.conf
 #
-# This configuration file is for testing the laplace2d CUDA example.
+# This configuration file is for testing the stencil CUDA example.
 # 
-# laplace2d and laplace2d_naive are compiled with different possible values of 
+# stencil and laplace2d_naive are compiled with different possible values of 
 # BLOCK_X and BLOCK_Y, then timed by the system.
 
 
@@ -47,13 +47,13 @@ compile = cd ../../ && make -B ARCH=sm_75 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%B
 # test
 # Shell command to run a test.
 
-test = ../../bin/laplace2d_%%ID%%
+test = ../../bin/stencil_%%ID%%
 
 
 # clean (optional, default: none)
 # Shell command to clean up (e.g. delete) any unwanted test files.
 
-clean = rm ../../bin/laplace2d_%%ID%%
+clean = rm ../../bin/stencil_%%ID%%
 
 
 
@@ -92,7 +92,7 @@ optimal = min
 # If not defined, no log will be saved.
 # This file will be overwritten!
 
-log = results/laplace2d.csv
+log = results/stencil.csv
 
 
 
