--- a/configs/hpclab13/coop_smem.conf
+++ b/configs/hpclab13/coop_smem.conf
@@ -1,10 +1,10 @@
 # Autotuning System
 #
-# laplace2d.conf
+# stencil.conf
 #
-# This configuration file is for testing the laplace2d CUDA example.
+# This configuration file is for testing the stencil CUDA example.
 # 
-# laplace2d and laplace2d_naive are compiled with different possible values of 
+# stencil and laplace2d_naive are compiled with different possible values of 
 # BLOCK_X and BLOCK_Y, then timed by the system.
 
 
@@ -48,13 +48,13 @@ compile = cd ../../ && make -B COOP=true SMEM=true ARCH=sm_75 ID=%%ID%% BLOCK_X=
 # test
 # Shell command to run a test.
 
-test = ../../bin/laplace2d_%%ID%%
+test = ../../bin/stencil_%%ID%%
 
 
 # clean (optional, default: none)
 # Shell command to clean up (e.g. delete) any unwanted test files.
 
-clean = rm ../../bin/laplace2d_%%ID%%
+clean = rm ../../bin/stencil_%%ID%%
 
 
 
@@ -92,7 +92,7 @@ optimal = min_time
 # If not defined, no log will be saved.
 # This file will be overwritten!
 
-log = results/laplace2d.csv
+log = results/stencil.csv
 
 
 
