--- a/configs/yme/deep_halo.conf
+++ b/configs/yme/deep_halo.conf
@@ -10,8 +10,8 @@ BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 BLOCK_Z = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 [testing]
 compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% HALO_DEPTH=%HALO_DEPTH% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
-test = ~/$YME_WORKING_FOLDER/bin/laplace3d_%%ID%%
-clean = rm ~/$YME_WORKING_FOLDER/bin/laplace3d_%%ID%%
+test = ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
+clean = rm ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
 [scoring]
 repeat = 20, med 
 optimal = min
@@ -20,4 +20,4 @@ optimal = min
 # performed will be written to.
 # If not defined, no log will be saved.
 # This file will be overwritten!
-#log = results/laplace3d.csv
+#log = results/stencil.csv
