fix: Add correct working directory to configs
When executing scripts that use the config files, the application would
set the working directory to 'configs/', resulting in the application
reading wrong memory when checking the result for errors.

--- a/configs/yme/deep_halo.conf
+++ b/configs/yme/deep_halo.conf
@@ -10,7 +10,7 @@ BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 BLOCK_Z = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 [testing]
 compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% HALO_DEPTH=%HALO_DEPTH% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
-test = ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
+test = cd ~/$YME_WORKING_FOLDER && ./bin/stencil_%%ID%%
 clean = rm ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
 [scoring]
 repeat = 20, med 
