--- a/configs/yme/smem.conf
+++ b/configs/yme/smem.conf
@@ -9,7 +9,7 @@ BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 BLOCK_Z = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
 [testing]
 compile = make -C ~/$YME_WORKING_FOLDER -B SMEM=true HOST=yme ARCH=sm_70 ID=%%ID%% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
-test = ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
+test = cd ~/$YME_WORKING_FOLDER && ./bin/stencil_%%ID%%
 clean = rm ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
 [scoring]
 repeat = 20, med 
