--- a/configs/yme/general.conf
+++ b/configs/yme/general.conf
@@ -2,15 +2,15 @@
 variables = {BLOCK_X, BLOCK_Y, BLOCK_Z}
 [values]
 # Use sed to change these values (set BLOCK_X, BLOCK_Y, BLOCK_Z to optimal values for a given DIM)
-BLOCK_X = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
-BLOCK_Y = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
-BLOCK_Z = 1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024
+BLOCK_X = 16
+BLOCK_Y = 8
+BLOCK_Z = 8
 [testing]
 compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
 test = cd ~/$YME_WORKING_FOLDER && ./bin/stencil_%%ID%%
 clean = rm ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
 [scoring]
-repeat = 20, med 
+repeat = 5, med 
 optimal = min
 [output]
 # If defined, this is the name of a CSV file which a log of the tests 
