fix: Move UNROLL_X from config to set_run_configuration script
As we want optimal block dimensions for every UNROLL_X value, including
the UNROLL_X variable within the config file makes is confusing.

--- a/configs/yme/general.conf
+++ b/configs/yme/general.conf
@@ -1,13 +1,12 @@
 [variables]
-variables = {UNROLL_X, BLOCK_X, BLOCK_Y, BLOCK_Z}
+variables = {BLOCK_X, BLOCK_Y, BLOCK_Z}
 [values]
 # Use sed to change these values (set BLOCK_X, BLOCK_Y, BLOCK_Z to optimal values for a given DIM)
-UNROLL_X = 1
 BLOCK_X = 16
 BLOCK_Y = 8
 BLOCK_Z = 8
 [testing]
-compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z% UNROLL_X=%UNROLL_X%
+compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
 test = cd ~/$YME_WORKING_FOLDER && ./bin/stencil_%%ID%%
 clean = rm ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
 [scoring]
