--- a/configs/yme/general.conf
+++ b/configs/yme/general.conf
@@ -6,7 +6,7 @@ BLOCK_X = 16
 BLOCK_Y = 8
 BLOCK_Z = 8
 [testing]
-compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
+compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
 test = cd ~/$YME_WORKING_FOLDER && ./bin/stencil_%%ID%%
 clean = rm ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
 [scoring]
