feat: Improve heuritic blockdims WIP

--- a/configs/yme/general.conf
+++ b/configs/yme/general.conf
@@ -1,16 +1,17 @@
 [variables]
-variables = {BLOCK_X, BLOCK_Y, BLOCK_Z}
+variables = {BLOCK_X, BLOCK_Y, BLOCK_Z, HEURISTIC}
 [values]
 # Use sed to change these values (set BLOCK_X, BLOCK_Y, BLOCK_Z to optimal values for a given DIM)
-BLOCK_X = 16
-BLOCK_Y = 8
-BLOCK_Z = 8
+HEURISTIC = 1
+BLOCK_X = 32
+BLOCK_Y = 1
+BLOCK_Z = 1
 [testing]
-compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ID=%%ID%% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
+compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ID=%%ID%% HEURISTIC=%HEURISTIC% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y% BLOCK_Z=%BLOCK_Z%
 test = cd ~/$YME_WORKING_FOLDER && ./bin/stencil_%%ID%%
 clean = rm ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
 [scoring]
-repeat = 5, med 
+repeat = 30, med 
 optimal = min
 [output]
 # If defined, this is the name of a CSV file which a log of the tests 
