--- a/configs/heid/wide_stencil.conf
+++ b/configs/heid/wide_stencil.conf
@@ -1,15 +1,15 @@
 [variables]
-variables = {STENCIL_DEPTH, NGPUS, DIM, BLOCK_X, BLOCK_Y, BLOCK_Z}
+variables = {RADIUS, NGPUS, DIM, BLOCK_X, BLOCK_Y, BLOCK_Z}
 [values]
 # Use sed to change these values
-STENCIL_DEPTH = 1
+RADIUS = 1
 NGPUS = 1
 DIM = 256
 BLOCK_X = 32
 BLOCK_Y = 8
 BLOCK_Z = 4
 [testing]
-compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% STENCIL_DEPTH=%STENCIL_DEPTH% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
+compile = make -C ~/$YME_WORKING_FOLDER -B HOST=yme ARCH=sm_70 ID=%%ID%% RADIUS=%RADIUS% NGPUS=%NGPUS% DIM=%DIM% BLOCK_X=%BLOCK_X% BLOCK_Y=%BLOCK_Y%
 test = cd ~/$YME_WORKING_FOLDER && ./bin/stencil_%%ID%%
 clean = rm ~/$YME_WORKING_FOLDER/bin/stencil_%%ID%%
 [scoring]
